# draft_cv_matcher

./: .gitignore  README.md  pyproject.toml
cv_match/: .env_example  manage.py
cv_match/common_bases/: enums.py  pagination.py
cv_match/cv_match/: asgi.py  settings.py  urls.py  wsgi.py
cv_match/matching/: admin.py  enums.py  extractor.py  filters.py  models.py  scorer.py  serializers.py  urls.py  views.py
frontend/: config.js  manage_cvs.html  manage_job_offers.html
